--- a/app/views/activities/focus/_show.html.erb
+++ b/app/views/activities/focus/_show.html.erb
@@ -1,161 +1,17 @@
-<div class="container content activity-focus">
+<% activity_rules = activity.activity_rules.order("dvalue DESC") %>
+<div class="container activity-focus">
   <div class="row-fluid ">
-    <div class="span7">
-      <!-- 主展示框 -->
-      <div id="main-model" class="widget">
-        <div class="modal-header">
-          <h3><%=activity.title %></h3>
-        </div>
-        <div class="modal-body">
-          <div class='picture'>
-            <% if activity.attachments.length > 1  %>
-              <div id="myCarousel" class="carousel slide">
-                <div class="carousel-inner">
-                    <% activity.attachments.each do |picture| %>
-                      <div class="item">
-                        <img class="preview" src="<%=picture.file %>" alt="聚集活动-图片">
-                      </div>
-                    <% end %>
-                </div>
-                <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-                <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-              </div>
-            <% else %>
-              <img class="preview" src="<%=activity.photos.default %>" />
-            <% end %>
-          </div>
-          <h4 class="right_bottom2 animate1 fadeInRight">
-            原价: <span><%=activity.price %></span>
-          </h4>
-          <h4>现价:</h4>
-          <span class="right_bottom1 animate2 fadeInRight">
-            <% ars = activity.activity_rules.order("dvalue DESC") %>
-            <% ars.each do |ar| %>
-              <% if(activity.participate <= ar.value.to_i) %>
-                <% current_ar = ar %>
-              <% end %>
-              人数<%= ar.value %>/价格<%= number_to_currency(ar.dvalue) %>;
-            <% end %>
-          </span>
-          <div class="focus_progress"></div>
-          <h4>商品描述：</h4>
-          <span class='describe'>
-            <%= activity.description %>
-          </span>
-          <h4>活动时间：</h4>
-          <span class='describe'>
-            <%= activity.start_time.strftime('%Y年%m月%d日') %> ——  
-            <%= activity.end_time.strftime('%Y年%m月%d日') %>
-          </span>
-        </div>
-        <div class="modal-foot">
-          <div class="big_comments_and_reply">
-
-            <div class="comments">
-              <% activity.comments.each do |c| %>
-              <div class="comment">
-                <img class='people-image' src="<%=c.user.photos.header %>">
-                <span class='author-name'>
-                  <a href='/people/<%=c.user.login %>'>
-                    <%=c.user.login %>
-                  </a>
-                </span>
-                <div class="message"><%=raw c.content_html %></div>
-              </div>
-              <% end %>
-            </div>
-            <div class="reply_form">
-              <div class='user-info'>
-                <img src="<%= current_user.photos.header %>">
-                <a href="<%= person_path(current_user) %>">
-                  <%=current_user.login %>
-                </a>
-              </div>
-              <div class='message'>
-                <textarea name='message' placeholder="发表评论..."></textarea>
-              </div>
-              <button class="submit-comment disabled btn btn-danger">评论</button>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="span9">
+      <%=render "/activities/focus/main", :activity  => activity, :activity_rules => activity_rules %>
     </div>
 
     <div class="span3">
-      <div class="widget" id="activity-actions">
-        <div class="modal-body">
-          <img class="author_image" src="<%=activity.author.photos.header %>"  />
-          <a href="<%= all_circles_person_communities_path(current_user) %>" data-toggle="modal" class="btn btn-primary pull-right" data-target="#PickCircle">分享活动</a> 
-          <h4><%= activity.author.login %></h4>
-          <p>关注 <%= activity.author.followings.count %></p>
-          <p>粉丝 <%= activity.author.followers.count %></p>
-        </div>
-        <div class="modal-foot">
-        </div>
-      </div>
-
-      <div class="widget" id="purchase-forms">
-        <%= simple_form_for product_item, :url => join_activities_focu_path(activity), :remote => true do |f| %>
-          <div class="modal-body">
-            <%= f.label :price %>
-            <input type='text' class='span12' value="<%= activity.activity_price %>"  readonly="true" />
-            <%= f.input :amount, input_html: {
-              :class => "amount span12"
-            } %>
-          </div>
-          <div class="modal-foot">
-            <div class="btn-group">
-              <% if activity.user_liked?(current_user) %>
-                <a class="btn unlike-button active" href="#">取消喜欢</a>
-              <% else %>
-                <a class="btn like-button" href="#"><%= icon(:heart) %> 喜欢</a>
-              <% end %>
-              <a class="btn like-count active" href="#"><%= activity.like %></a>
-            </div>
-            <div class="btn-group">
-              <% if activity.valid_expired? %>
-                <% if activity.start_sale? %>
-                  <button class="btn btn-danger partic-button active" type="submit" name="join">
-                    <%= icon(:'shopping-cart', :white) + " 购买" %>
-                  </button>
-                  <a class="btn btn-danger partic-count active" href="#"><%= activity.participate %></a>
-                <% end %>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
-      </div>
+      <%=render "/activities/focus/right_bar", :activity  => activity, :product_item => product_item %>
     </div>
   </div>
-  <%= render "/activities/share_activity_to_circles" %>
 </div>
+<%= render "/activities/share_activity_to_circles" %>
 <script type="text/template" id="comment-template">
-  <div class="comment hide">
-    <img class="people-image" src="<%= current_user.avatar %>">
-    <span class="author-name">
-      <a href='/people/<%=current_user.login %>'><%= current_user.login %></a>
-    </span>
-    <div class="message">
-      <%%= content %>
-    </div>
-  </div>
+  <%=render "/activities/comment" %>
 </script>
-
-<script type="text/javascript">
-  $(function(){
-    $(".item").first().addClass("active");
-    bar = $('.focus_progress');
-    bar.bind('positionChanged', function(event) {
-      event.bar.changedLabel = '当前' + event.bar.position + '人';
-    })
-    bar.bind('labelLoaded', function(event) {
-      i = event.labelIndex;
-      event.bar.loadedLabel = event.bar.getMarker(i)+'人/￥' + event.bar.getMarkerLabel(i);
-    })
-    bar.progressbar({
-      minimum: <%= activity.participate %>,
-      markers: <%= ars.pluck(:value).map(&:to_i) %>, 
-      markerLabels: <%= ars.pluck(:dvalue).map(&:to_f) %>
-    })
-  })
-</script>
+<%=render "/activities/focus/foot_js", activity: activity, activity_rules: activity_rules %>
