修复个人页面图片和按钮不对齐问题

--- a/app/views/people/base/_user_info.html.erb
+++ b/app/views/people/base/_user_info.html.erb
@@ -4,21 +4,22 @@
 	<%= simple_form_for @user_auth,
 	url: url,
 	html: { method: :put, class: "form-horizontal user_auth" } do |f| %>
-		<div class="row-fluid">
-			<div class="span5 reset_avatar main_panle">
-				<div class="photo_span cell" >
-					<span>身份证照</span>
+		<div class="row-fluid top_head">
+			<div class="span2 title">
+				<span>身份证照</span>
+			</div>
+			<div class="span3 reset_avatar main_panle">
+				<div class="photo_span" >
 					<img class="bottom normal_picture img-polaroid">
-				</div>  
+				</div>
 				<div id="image_bottom">
 					<div class="hidden_one " id="hidden_text">
-						<%#= upload_tip %>
 					</div>
-					<div class="update_photo_panle cant_see_me upload_user_avatar file-box offset2" >                
+					<div class="update_photo_panle cant_see_me upload_user_avatar file-box" >                
 					</div>
 				</div>
 			</div>
-			<div class="span7 input_locate">
+			<div class="span6 input_locate">
 				<%= f.input :ower_name, required: true, label: '真实姓名' %>
 				<%= f.input :ower_shenfenzheng_number, required: true, label: '身份证号' %>
 				<%= f.input :phone, required: true, label: '联系电话' %>
