--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -372,7 +372,7 @@
   $margin-top: 20px;
 
   .paddings{
-    padding-bottom: 40px;
+    padding-bottom: 20px;
   }
   hr{
     margin: 0px;
@@ -388,6 +388,13 @@
   }
 
   .section {
+    .top_head{
+      margin-top:30px;
+      .title{
+        text-align: right;
+        margin-top: 60px;
+      }
+    }
     margin-bottom: 20px;
     margin-top: 20px;
     .reset_avatar {
@@ -410,7 +417,7 @@
     }
 
     .input_locate {
-      margin-top: 50px;
+      // margin-top: 30px;
       margin-left: -10px;
 
       input {
