--- a/app/views/people/_user_login_info.html.erb
+++ b/app/views/people/_user_login_info.html.erb
@@ -1,17 +1,18 @@
 <div class="section">
 	<h4>登录信息</h4>
 	<hr />
-	<div class="row-fluid form-horizontal">
-		<div class="span5 reset_avatar main_panle1">
-			<div class="photo_span cell" >
-				<span>个人头像</span>
+	<div class="row-fluid top_head form-horizontal">
+		<div class="span2 title">
+			<span>个人头像</span>
+		</div>
+		<div class="span3 reset_avatar main_panle1">
+			<div class="photo_span" >
 				<img class="bottom normal_picture img-polaroid">
 			</div>  
 			<div id="image_bottom">
 				<div class="hidden_one " id="hidden_text">
-					<%#= upload_tip %>
 				</div>
-				<div class="update_photo_panle cant_see_me upload_user_avatar file-box offset2">
+				<div class="update_photo_panle cant_see_me upload_user_avatar file-box ">
 				</div>
 			</div>
 		</div>
