添加商品单位显示

--- a/app/views/ask_buy/_preview_template.html.erb
+++ b/app/views/ask_buy/_preview_template.html.erb
@@ -11,7 +11,10 @@
         <h5 class="title href_name">{{title}}</h5>
         <p class='describe'>
           单价 <span class='price'>￥{{price}}</span>
-          <span class='amount'>求购 {{amount}}件</span>
+          <span class='amount'>
+            求购 {{amount}}
+            {{product.unit.name}}
+          </span>
         </p>
       </div>
       <div class='userinfo shopinfo'>
