--- a/app/views/system/activities/_check_auction.html.erb
+++ b/app/views/system/activities/_check_auction.html.erb
@@ -22,6 +22,13 @@
 				</td>
 			</tr>
 			<tr>
+				<td>库存</td>
+				<td>
+					<%= @activity.shop_product.try(:inventory) %>
+					<%= @activity.shop_product.try(:inventory_unit).try(:name) %>
+				</td>
+			</tr>
+			<tr>
 				<td>原价</td>
 				<td><%= number_to_currency @activity.shop_product.price %></td>
 			</tr>
