混合未读消息与历史消息

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1506,6 +1506,10 @@ h2 small {
           text-align: right;
         }
       }
+      .showMoreFlag {
+        text-align: center;
+        color: #478ebb;
+      }
     }
   }
 
