--- a/app/assets/stylesheets/admins.scss
+++ b/app/assets/stylesheets/admins.scss
@@ -386,3 +386,20 @@ $left-side-admin-width: 160px;
     }
   }
 }
+
+.card_item{
+  .full-mode{
+    position: relative;
+
+    >.invalid-full{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      @include transparent(rgb(172, 145, 145), 0.44);
+      font-size: 20px;
+      text-align: center;
+    }
+  }
+}
