--- a/app/views/layouts/admins.html.erb
+++ b/app/views/layouts/admins.html.erb
@@ -4,117 +4,43 @@
 <%= render "head", :styles => [:admins] %>
 
 <body class="<%= controller.controller_name %>" style="zoom: 1">
-	<%= render "chromeframe" %>
-	<%= render "logo" %>
-	<%= render "flashes" %>
+  <%= render "chromeframe" %>
+  <%= render "logo" %>
+  <%= render "flashes" %>
 
-	<%= side_bar :admin_left_side %>
-	<div class="wrap">
-		<%= render "header" %>
-		<div class='content container-fluid'>
-			<%= yield %>
-		</div>
-	</div>
+  <%= side_bar :admin_left_side %>
+  <div class="wrap">
+    <%= render "header" %>
+    <div class='content container-fluid'>
+      <%= yield %>
+    </div>
+  </div>
 
-	<div id="popup-layout"></div>
-	<%= render "right_sidebar" %>
-	<%= render "footer" %>
-	<%= render "baidu_analyzer" %>
-
-    <%= javascript_include_tag "polyfills" %>
-    <%= javascript_include_tag :admins %>
-    <%= javascript_include_tag "my_cart" %>
+  <div id="popup-layout"></div>
+  <%= render "right_sidebar" %>
+  <%= render "footer" %>
+  <%= render "baidu_analyzer" %>
+  <%= javascript_include_tag "polyfills" %>
+  <%= javascript_include_tag :admins %>
+  <%= javascript_include_tag "my_cart" %>
+  <%= render "javascripts" %>
 
   <script type="text/javascript">
-
-    window.clients = Realtime.connect({
-      server_uri: '<%= realtime_uri %>',
-      token: '<%= current_user.try(:im_token) %>',
-      current_user: '<%= current_user.try(:login) %>',
-      current_shop: '<%= current_shop.try(:name) %>',
-      form_token: '<%= form_authenticity_token %>'
-    });
-
-    $("body").addClass('right-mini');
-    ChatManager.getInstance({ el: $(".right-sidebar .body") });
-    $( window ).resize(function() {
-      $viewportHeight = $(window).height()
-      $( ".right-sidebar .body" ).css("height", $viewportHeight);
-      $( ".right-sidebar .slimScrollDiv" ).css("height", $viewportHeight);
-    });
-
     $(function(){
-
-      window.topbar = new TopBar({el: "#topbar"});
-      NotificationViewList.startup({
-        el: $(".notification-menu"),
-        current_user_login: '<%= current_user.login %>'
-      });
-
-      $(document).delegate( ".connect_by_self", "click", function(){
-        clients.socket.socket.socket.reconnect()
-        $(".popover-content").html("正在连接...")
-      })
-
-      $('body').on('click', function (e) {
-        $choose_face = $('[data-toggle="popover"].choose-face');
-        $choose_face.each(function () {
-          if (!$(this).is(e.target) && $(this).has(e.target).length === 0 && $choose_face.has(e.target).length === 0 ){
-            $(this).popover('hide');
-          }
-        })
-      });
-
-      $(".save_activity").on('click', function(type){
-        var $form = $(".activity_forms>.active>form");
-        $.ajax({
-          type: 'post',
-          dataType: 'json',
-          data: $form.serialize(),
-          url: $form.attr('action'),
-          success: function(data, status, xhr) {
-            $form[0].reset();
-            $("#active_dialog").modal('hide');
-            pnotify({ text: '活动发布成功,等待审核……' });
-          },
-          error: function(xhr, status, error) {
-            pnotify({ type: 'error', title: '活动发布失败', text: JSON.parse(xhr.responseText).join('\n') })
-          }
-        });
-      });
-
-      $(".save_ask_buy").on('click', function(type){
-        var $form = $(".form_ask_buy");
-
-        $form.submit();
-
-        $form.on("ajax:success", function(){
-          $form[0].reset();
-          $("#ask_buy_dialog").modal('hide');
-        });
-
-        $form.on("ajax:error", function(event, xhr, state){
-          $form.replaceWith(xhr.responseText);
-        });
-      });
-      
-      // new CategoryTree({el: "#category-sidebar"});
-      // new LeftSideBar({el: "#left_sidebar"});
-
-	  var section = "<%= yield :admin_siderbar %>";
-	  if(section != ""){
-	    $("#left_sidebar ul li #" + section).parents("li")
-	      .addClass("active")
-	      .parents(".accordion-body")
-	      .addClass("in");
-	  }
+      var section = "<%= yield :admin_siderbar %>";
+      if(section != ""){
+        $("#left_sidebar ul li #" + section).parents("li")
+          .addClass("active")
+          .parents(".accordion-body")
+          .addClass("in");
+      }
     })
   </script>
   <%# 开发环境下显示500错误信息 %>
   <% unless Rails.env.production? %>
     <%= javascript_include_tag "show_500_error_in_dev" %>
-  <% end %>   	
-	<%#= render "javascripts" %>
-	<%= javascripts_codes %>
+  <% end %>     
+  <%#= render "javascripts" %>
+  <%= javascripts_codes %>
 </body>
 </html>
