--- a/app/views/layouts/people.html.erb
+++ b/app/views/layouts/people.html.erb
@@ -19,53 +19,10 @@
   <%= javascript_include_tag "people" %>
   <%= javascript_include_tag "my_cart" %>  
   <%= javascript_include_tag "polyfills" %>
+  <%= render "javascripts" %>
 
   <script type="text/javascript">
-    window.clients = Realtime.connect({
-      server_uri: '<%= realtime_uri %>',
-      token: '<%= current_user.try(:im_token) %>',
-      current_user: '<%= current_user.try(:login) %>',
-      current_shop: '<%= current_shop.try(:name) %>',
-      form_token: '<%= form_authenticity_token %>'
-    });
-
     $(function(){
-      // new Upload({
-      //   verify_authenticity_token: "<%= form_authenticity_token %>",
-      //   action: "/users/upload_avatar/",
-      //   current_user: { 
-      //     id: "<%= current_user.id %>", 
-      //     login: "<%= current_user.login %>",
-      //   },
-      //   targets: [{ 
-      //     el: $(".main_panle1"), 
-      //     input_name: "filename", 
-      //     photo: "<%= @people.photo.filename %>" 
-      //   }]
-      // });
-
-      // new Upload({
-      //   verify_authenticity_token: "<%= form_authenticity_token %>",
-      //   action: "/user_checkings/upload_photo/",
-      //   current_user: { 
-      //     id: "<%=current_user.id %>", 
-      //     login: "<%= current_user.login %>",
-      //   },
-      //   targets: [{ 
-      //     el: $(".main_panle"), 
-      //     input_name: "ower_photo", 
-      //     photo: "<%= @user_checking.try(:ower_photo) %>"
-      //   }]
-      // })   
-
-      $("body").addClass('right-mini');
-      ChatManager.getInstance({ el: $(".right-sidebar .body") });
-      $( window ).resize(function() {
-        $viewportHeight = $(window).height()
-        $( ".right-sidebar .body" ).css("height", $viewportHeight);
-        $( ".right-sidebar .slimScrollDiv" ).css("height", $viewportHeight);
-      });
-      
       <% if current_user.present? %>
         new Followers({
           login: "<%= current_user.login %>",
@@ -80,62 +37,10 @@
           .parents("li").addClass("active")
           .parents(".accordion-body").addClass("in")
       }
-      window.topbar = new TopBar({el: "#topbar"});
-      NotificationViewList.startup({
-        el: $(".notification-menu"),
-        current_user_login: '<%= current_user.login %>'
-      });
 
-      $(document).delegate( ".connect_by_self", "click", function(){
-        clients.socket.socket.socket.reconnect()
-        $(".popover-content").html("正在连接...")
-      })
-
-      $('body').on('click', function (e) {
-        $choose_face = $('[data-toggle="popover"].choose-face');
-        $choose_face.each(function () {
-          if (!$(this).is(e.target) && $(this).has(e.target).length === 0 && $choose_face.has(e.target).length === 0 ){
-            $(this).popover('hide');
-          }
-        })
-      });
-
-      $(".save_activity").on('click', function(type){
-        var $form = $(".activity_forms>.active>form");
-        $.ajax({
-          type: 'post',
-          dataType: 'json',
-          data: $form.serialize(),
-          url: $form.attr('action'),
-          success: function(data, status, xhr) {
-            $form[0].reset();
-            $("#active_dialog").modal('hide');
-            pnotify({ text: '活动发布成功,等待审核……' });
-          },
-          error: function(xhr, status, error) {
-            pnotify({ type: 'error', title: '活动发布失败', text: JSON.parse(xhr.responseText).join('\n') })
-          }
-        });
-      });
-
-      $(".save_ask_buy").on('click', function(type){
-        var $form = $(".form_ask_buy");
-
-        $form.submit();
-
-        $form.on("ajax:success", function(){
-          $form[0].reset();
-          $("#ask_buy_dialog").modal('hide');
-        });
-
-        $form.on("ajax:error", function(event, xhr, state){
-          $form.replaceWith(xhr.responseText);
-        });
-      });
-
-      id = ~~paramsFromUrl().id;
-      if (id > 0) {
-        $target = $('.notification_panel').find('[data-id="'+id+'"]');
+      var notification_id = ~~paramsFromUrl().id;
+      if (notification_id > 0) {
+        $target = $('.notification_panel').find('[data-id="'+notification_id+'"]');
         $target.css('background-color', 'rgb(29, 107, 126)');
       }
       
