--- a/app/views/application/_javascripts.html.erb
+++ b/app/views/application/_javascripts.html.erb
@@ -31,7 +31,7 @@
     })
 
     $('body').on('click', function (e) {
-      $choose_face = $('[data-toggle="popover"].choose-face');
+      var $choose_face = $('[data-toggle="popover"].choose-face');
       $choose_face.each(function () {
         if (!$(this).is(e.target) && $(this).has(e.target).length === 0 && $choose_face.has(e.target).length === 0 ){
           $(this).popover('hide');
