fix # 部分页面丢失

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,3 +113,9 @@
   <% end %>   
   </body>
 </html>
+
+<script type="text/javascript">
+  $(function(){
+    notifier.setPermission()
+  })
+</script>
