--- a/app/views/layouts/search.html.erb
+++ b/app/views/layouts/search.html.erb
@@ -22,7 +22,7 @@
   </body>
 </html>
 <script type="text/javascript">
-$(document).ready(function(){
-  notifier.setPermission()
-})
+  $(function(){
+    notifier.setPermission()
+  })
 </script>
