--- a/app/views/users/_template.html.erb
+++ b/app/views/users/_template.html.erb
@@ -1,6 +1,6 @@
 <div class='user_info span4'>
   <div class="hover_place">
-    <div class='info_detail' user-id='{{ id }}' >
+<!--     <div class='info_detail' user-id='{{ id }}' >
         <div class="bg_nature">
           <img src="http://lorempixel.com/240/150/nature" />
         </div>
@@ -27,11 +27,12 @@
             </a>
           </div>
         </div>
-    </div>
+    </div> -->
     <!-- <span class="label label-warning pull-right">买家</span> -->
 
   </div>
   <div class="content">
+    <span class="label label-warning pull-right">买家</span>
     <div class="actions">
       <a href="javascript:void(0)" class="btn btn-success sayhi">打招呼</a>
     </div>
@@ -42,7 +43,6 @@
       <p>{{ower_name }}</p>
     </div>
     <div class="name">
-      <!-- <i class="icon-user"></i> -->
       {{ login }}
     </div>
 
@@ -52,7 +52,7 @@
 
     <div class="industry">
       <!-- <i class="icon-star"></i> -->
-      {{ industry_type }}行业&nbsp;买家
+      {{ industry_type }}行业
     </div>    
   </div>
 </div>
